@@ -1,3 +1,10 @@
+2010-03-17   Romain Francois <romain@r-enthusiasts.com>
+
+	* src/fastLm.cpp: added some arma:: prefix
+	
+	* src/RcppArmadillo.cpp: update examples to use make_list and showcase
+	various ways to use them : Named(.)=., _[.] = , Named( ., . )
+
 2010-03-11  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Release 0.1.0 and initial CRAN upload
